--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  dotnetSdkVersion: '8.x'
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
